Slight fixing of project metadata

--- a/AdventOfCode/Day2/Day2.csproj
+++ b/AdventOfCode/Day2/Day2.csproj
@@ -40,9 +40,7 @@
         <Reference Include="System.Xml"/>
     </ItemGroup>
     <ItemGroup>
-        <EmbeddedResource Include="Program.cs">
-          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </EmbeddedResource>
+        <Compile Include="Program.cs"/>
         <Compile Include="Properties\AssemblyInfo.cs"/>
     </ItemGroup>
     <ItemGroup>
