Taking a new approach for Day 3

--- a/AdventOfCode/Day2/Day2.csproj
+++ b/AdventOfCode/Day2/Day2.csproj
@@ -44,7 +44,9 @@
         <Compile Include="Properties\AssemblyInfo.cs"/>
     </ItemGroup>
     <ItemGroup>
-      <Content Include="Input" />
+      <EmbeddedResource Include="Input">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </EmbeddedResource>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
