--- a/AdventOfCode/Day1/Day1.csproj
+++ b/AdventOfCode/Day1/Day1.csproj
@@ -45,7 +45,7 @@
     </ItemGroup>
     <ItemGroup>
       <EmbeddedResource Include="Input">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </EmbeddedResource>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
