re-organizing folders

--- a/Day4_Part1/Day4_Part1.csproj
+++ b/Day4_Part1/Day4_Part1.csproj
@@ -9,7 +9,7 @@
         <OutputType>Exe</OutputType>
         <AppDesignerFolder>Properties</AppDesignerFolder>
         <RootNamespace>Day4</RootNamespace>
-        <AssemblyName>Day4</AssemblyName>
+        <AssemblyName>Day4_Part1</AssemblyName>
         <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
         <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
